--- a/实验 3/实验三.md
+++ b/实验 3/实验三.md
@@ -33,6 +33,7 @@
     ![](Img/l1.png)
 
     在`/etc/sudoers`文件中添加图中蓝框内的内容
+
     ![](Img/l1-2.png)
 
     ![](Img/l1-3.png)
@@ -48,8 +49,24 @@
     ![](Img/l3.png)
 
 4. 如何实现开机自动挂载Virtualbox的共享目录分区
-    - 在`/etc/fstab`文件中添加
-    `sharing /mnt/share vboxsf defaults 0 0`
+
+    - 设置虚拟机共享文件夹的属性为自动挂载，无法实现此功能
+
+    - 参考：[分享Virtualbox Ubuntu 共享文件夹、自动挂载的一些问题](https://blog.csdn.net/skylake_/article/details/53132499)，先进行挂载文件夹操作
+
+    - 在进行挂载过程中由于`vboxsf`类型无法识别，需要安装虚拟机增强功能，但安装失败
+
+    ![](Img/tr3.png)
+
+    ![](Img/tr4.png)
+
+    - 参考：[Unable to mount the CD/DVD image on the machine Sandbox](https://askubuntu.com/questions/321589/unable-to-mount-the-cd-dvd-image-on-the-machine-sandbox) 并借助PSFTP实现安装增强功能，挂载成功不会报错
+
+    ![](Img/s1.png)
+
+    - 在`/etc/fstab`文件添加 `VBox_share /mnt/share vboxsf defaults 0 0`，并重启，系统进入了不正常的页面，看了很多帖子，仍不明白原理和解决放法
+
+    ![](Img/tr5.png)
 
 5. 基于LVM（逻辑分卷管理）的分区如何实现动态扩容和缩减容量
     - 在`ext`文件系统中：
