修改用户密码在脚本中的存储方式

--- a/实验 7/实验7.md
+++ b/实验 7/实验7.md
@@ -26,7 +26,8 @@
     - `templates`是改动好的定制配置文件
 
 - 备注：新建用户时，要对用户密码计算哈希值才可以正常登录
-    > mkpasswd --method=sha-512 "username"
+    - 为尽量避免直接在脚本中明文存储口令，使用如下指令提前计算口令哈希值
+    > mkpasswd --method=sha-512 "password"
 
 ## 实验结果
 
