更正脚本代码缺陷，完善实验报告

--- a/实验 6/实验6.md
+++ b/实验 6/实验6.md
@@ -31,6 +31,10 @@
 
     ![](img/anon_no_up.png)
 
+    - 第一张图中显示，使用ftp必须要切换到相应目录下才能下载文件，而lftp可以指定路径直接下载文件
+
+    ![](img/lftp1.png)
+
 - 配置一个支持用户名和密码方式访问的账号，该账号继承匿名访问者所有权限，且拥有对另1个独立目录及其子目录完整读写（包括创建目录、修改文件、删除文件等）权限
     - 在sammy用户的目录下出现了匿名用户目录下的文件，可证明继承匿名者访问权限
 
@@ -42,9 +46,13 @@
 
     ![](img/rnm_del_mkd.png)
 
-- FTP用户不能越权访问指定目录之外的任意其他目录和文件
+- FTP用户不能越权访问指定目录之外的任意其他目录和文件（**注意**：不是通过 绝对路径 方式来遍历，而是验证通过 相对路径 （例如 cd ../../../../ ）方式无法翻出 FTP 服务器指定的当前用户的 家目录 访问到 家目录及其所有子目录 以外的任何其他目录）
 
     ![](img/no_out.png)
+
+    - 如果需要在命令行使用 FTP 客户端，首选不是 ftp ，而是另一款需要单独安装的 lftp
+
+    ![](img/lftp.png)
 
 - 匿名访问权限仅限白名单IP来源用户访问，禁止白名单IP以外的访问
 
@@ -70,7 +78,7 @@
 
     ![](img/nfs_dh.png)
 
-    - host的`/etc/exports`文件中，设置home目录为可读可写，general目录为只读
+    - host的`/etc/exports`文件中，设置home目录为可读可写，general目录为只读（**注意**：设置home目录为 NFS 共享可读可写是非常危险的一件事情，会破坏 NFS 服务器上用户家目录的权限设置。以后应避免！！）
 
     ```
 
@@ -86,7 +94,8 @@
 
 - 客户端共享目录中文件、子目录的属主、权限信息和在NFS服务器端上查看到的信息一样吗？
 
-    - 客户端与服务器端一致
+    - 客户端与服务器端一致的只是 uid 和 gid ，不同主机上的相同 uid 和 gid 并不意味着映射到相同的 用户名 和 组名
+
     - client
 
     ![](img/home_no_squash_clt.png)
@@ -275,6 +284,9 @@
 
 ## bash-cheatsheet
 
+
+- 因脚本在Windows和Linux系统间拷贝，导致格式问题如“$'\r': command not found”，可以使用如下指令将脚本转换为Linux格式
+    > dos2unix "filename"
 - [How to include file in a bash shell script](https://stackoverflow.com/questions/10823635/how-to-include-file-in-a-bash-shell-script)
 - [Check whether a user exists](https://stackoverflow.com/questions/14810684/check-whether-a-user-exists)
 - [Check if a directory exists in a shell script](https://stackoverflow.com/questions/59838/check-if-a-directory-exists-in-a-shell-script)
