更正实验1-4问题，完善实验报告

--- a/实验 1/实验一.md
+++ b/实验 1/实验一.md
@@ -40,12 +40,24 @@
 
     ![](Img/e2.png)
 
-3. 将`ubuntu-server-autoinstall.seed`保存到`\cd-image\preseed`路径下，
-修改`isolinux\isolinux.cfg`，增加内容`timeout 10`
+    - 然而实验过程中发现`default`标签并没有作用。必须将`autoinstall`标签放在所有标签之前，才可以默认选择`autoinstall`标签，可能是因为会从上往下读取`txt.cfg`的标签内容
+
+
+3. 将`ubuntu-server-autoinstall.seed`保存到`/cd-image/preseed`路径下，
+修改`isolinux/isolinux.cfg`，增加内容`timeout 10`
 
     ![](Img/e3.png)
 
+    - 老师批注：其实，既然是全自动安装，完全没必要等待 10 秒，你可以试试 timeout 0
+
+    - 然而在重新实验验证时，如果是`timeout 0`，则安装界面会停止在选择语言界面，需要手动选择安装类型标签。似乎`timeout 0`会无限等待，因此仍然保留`timeout 10`
+
+    - ref: [Prevent Language selection at ubuntu installation](https://unix.stackexchange.com/questions/196874/prevent-language-selection-at-ubuntu-installation)
+
+
 4. 重新生成md5值，并生成镜像
+
+    - 注意BUILD变量一定要写绝对路径
 
     ![](Img/s4.png)
 
@@ -59,8 +71,8 @@
 1. Virtualbox安装完Ubuntu之后新添加的网卡如何实现系统开机自动启用和自动获取IP
     - 在`/etc/network/interfaces`文件中添加
     ```
-    auto eth0
-    iface eth0 inet dhcp
+    auto enp0s8
+    iface enp0s8 inet dhcp
     ```
     ![](Img/s5.png)
 
