--- a/实验 3/实验三.md
+++ b/实验 3/实验三.md
@@ -32,11 +32,12 @@
 1. 如何添加一个用户并使其具备sudo执行程序的权限
     ![](Img/l1.png)
 
-    在`/etc/sudoers`文件中添加图中蓝框内的内容
+    在`/etc/sudoers`文件中添加图中蓝框内的内容（**注意：** 以后应避免通过直接编辑 /etc/sudoers 的方式来给一个用户添加 sudo 权限。如果需要的话，把该用户加入到 sudo 用户组即可）
 
     ![](Img/l1-2.png)
 
     ![](Img/l1-3.png)
+
 2. 如何将一个用户添加到一个用户组
 
     将用户`hkl`添加到`sudo`用户组
@@ -50,7 +51,7 @@
 
 4. 如何实现开机自动挂载Virtualbox的共享目录分区
 
-    - 设置虚拟机共享文件夹的属性为自动挂载，无法实现此功能
+    - 直接设置虚拟机共享文件夹的属性为`自动挂载`，对`ubuntu-server`似乎没有用，重启后虚拟机中仍然没有挂载共享文件夹
 
     - 参考：[分享Virtualbox Ubuntu 共享文件夹、自动挂载的一些问题](https://blog.csdn.net/skylake_/article/details/53132499)，先进行挂载文件夹操作
 
@@ -64,20 +65,24 @@
 
     ![](Img/s1.png)
 
-    - 在`/etc/fstab`文件添加 `VBox_share /mnt/share vboxsf defaults 0 0`，并重启，系统进入了不正常的页面，看了很多帖子，仍不明白原理和解决放法
+    - 在`/etc/fstab`文件添加 `VBox_share /mnt/share vboxsf defaults 0 0`，并重启，系统进入了不正常的页面，看了很多帖子，仍不明白原理和解决方法
 
     ![](Img/tr5.png)
 
+    - [**更清晰更systemd的实现方法**](automount.md)
+    
+
 5. 基于LVM（逻辑分卷管理）的分区如何实现动态扩容和缩减容量
     - 在`ext`文件系统中：
-    - LVM扩容
+    - LVM扩容  
         ```
         umount  /mnt/  
         mkfs.ext4  /dev/vg1/lv1  
         lvextend  -L 400M  /dev/vg1/lv1  
         resize2fs  /dev/vg1/lv1
         ```
-    - LVM缩减
+
+    - LVM缩减  
         ```
         umount  /mnt/
         e2fsck -f /dev/vg1/lv1  
@@ -86,33 +91,52 @@
         ```
 
 6. 如何通过systemd设置实现在网络连通时运行一个指定脚本，在网络断开时运行另一个脚本
-    - 更改该网络服务的配置文件s
-    - 网通连通时运行指定脚本
+    - 更改网络服务的配置文件`/lib/systemd/system/networking.service`
+    - 网通连通后运行指定脚本  
     ```
-    [Service]  
-    ...  
-    ExecStart: path-of-script -D $OPTIONS  
-    ...
-    ```
-    - 网络断开时运行另一个脚本
-    ```
-    [Service]  
 
+    [Service]  
     ...  
-    ExecStop: path-of-script -D $OPTIONS  
+    ExecStartPost: path-of-script -D $OPTIONS  
     ...
 
     ```
+    - 网络断开后运行另一个脚本  
+    ```
+
+    [Service]  
+    ...  
+    ExecStopPost: path-of-script -D $OPTIONS  
+    ...
+
+    ```
+
+    ![](img/exec0.png)
+
+    - `sudo systemctl daemon-reload`
+
+    - 启动或关闭网络服务，只能在status中看到效果
+
+        > sudo systemctl [start|stop|status] networking.service
+
+        ![](img/exec1.png)
+
+        ![](img/exec2.png)
+
+    - 注意如果是要执行脚本，一定要写清楚绝对路径(包括脚本中的路径也必须是绝对路径)
+
+        ![](img/execw.png)
 
 7. 如何通过systemd设置实现一个脚本在任何情况下被杀死之后会立即重新启动？实现杀不死
-    - 设置该脚本配置文件
-    ```
-    [Service]  
-    ...  
-    Restart:always  
-    ...
-    ```
+    - 设置该脚本配置文件(图例为sshd.service)
 
+    ![](img/restart.png)
+
+    - 但是，即便设置为`always`，当使用`systemctl stop`关闭时，或退出状态码在`RestartPreventExitStatus`中设定过的话，也无法重启。资料中说设置`RestartForceExitStatus`可以强制重启，但这个设置对`systemctl stop`也无效。。
+
+    - 参考：[systemd.service — Service unit configuration](https://www.freedesktop.org/softwre/systemd/man/systemd.service.html)
+
+    > As exceptions to the setting above, the service will not be restarted if the exit code or signal is specified in RestartPreventExitStatus= (see below) or the service is stopped with systemctl stop or an equivalent operation. Also, the services will always be restarted if the exit code or signal is specified in RestartForceExitStatus= (see below).
 
 ## 参考链接
 
