--- a/实验 4/实验4.md
+++ b/实验 4/实验4.md
@@ -29,9 +29,13 @@ function judge {
 	else
 		for i in "$@"; do
 			#if [[ $(bc <<< scale($i)) -ne 0]]; then
-			if [[ ! -z  "$(echo "$i" | grep '[.]')" ]];  then
-				echo "Error!! You should not have input floating point"
-				mark=0
+			# if [[ ! -z  "$(echo "$i" | grep '[.]')" ]];  then
+			#	echo "Error!! You should not have input floating point"
+			#	mark=0
+			# 应采用白名单
+			if [[ -z  "$(echo "$i" | grep -E '^[0-9]+$')" ]];  then
+   				echo 'only INTEGER is allowed as input here'
+   				mark=0
 			elif [[ ! -z "$( echo "$i" | grep '[a-zA-Z]' )" ]]; then
 				echo "Error!! You should not have input characters"
 				mark=0
@@ -47,6 +51,10 @@ judge "$@"
 
 
 ```
+
+- 备注：规范化用户输入类似 024、00024 形式的非法整数为可以正确运算的整数形式
+
+	> i=$(echo $i | bc)
 
 - 测试
 
@@ -118,6 +126,8 @@ judge "$@"
 - 参考：
 	- [How to Quickly Resize, Convert & Modify Images from the Linux Terminal](https://www.howtogeek.com/109369/how-to-quickly-resize-convert-modify-images-from-the-linux-terminal/)
 	- [Example Usage of the Composite Command](https://www.imagemagick.org/script/composite.php)
+	- [Extract filename and extension in Bash
+](https://stackoverflow.com/questions/965053/extract-filename-and-extension-in-bash)
 
 ## 任务二（运动员）
 
@@ -142,6 +152,10 @@ judge "$@"
 
 	![](Img/name.png)
 
+	- 改动第185行代码为`ln[${#ln[@]}+1]="$name"`，则解决上述问题。备注：这里计算的名字长度以字符个数为单位，去除名字中间的空格计数
+
+	![](img/mdf1.png)
+
 - 参考：
 	- [How to define hash tables in Bash?
 ](https://stackoverflow.com/questions/1494178/how-to-define-hash-tables-in-bash)
@@ -161,7 +175,9 @@ judge "$@"
 	```bash
 	# 统计访问来源主机TOP 100和分别对应出现的总次数
 	bash Task_3.sh -d ./web_log.tsv -h 20  
-	``` 
+	```
+
+	- [数据结果](result3/1.txt)
 
 	![](Img/host.png)
 
@@ -170,12 +186,16 @@ judge "$@"
 	bash Task_3.sh -d ./web_log.tsv -i 20  
 	```
 
+	- [数据结果](result3/2.txt)
+
 	![](Img/ip.png)
 
 	```bash
 	# 统计最频繁被访问的URL TOP 100
 	bash Task_3.sh -d ./web_log.tsv -u 20  
 	```
+
+	- [数据结果](result3/3.txt)
 
 	![](Img/url.png)
 
@@ -197,5 +217,7 @@ judge "$@"
 	# 给定URL输出TOP 100访问来源主机
 	bash Task_3.sh -d ./web_log.tsv -l "/images/launchmedium.gif"  
 	```
+
+	- [数据结果](result3/4.txt)
 
 	![](Img/l.png)
