修改实验报告3图片路径错误

--- a/实验 3/实验三.md
+++ b/实验 3/实验三.md
@@ -70,7 +70,7 @@
     ![](Img/tr5.png)
 
     - [**更清晰更systemd的实现方法**](automount.md)
-    
+
 
 5. 基于LVM（逻辑分卷管理）的分区如何实现动态扩容和缩减容量
     - 在`ext`文件系统中：
@@ -111,7 +111,7 @@
 
     ```
 
-    ![](img/exec0.png)
+    ![](Img/exec0.png)
 
     - `sudo systemctl daemon-reload`
 
@@ -119,18 +119,18 @@
 
         > sudo systemctl [start|stop|status] networking.service
 
-        ![](img/exec1.png)
+        ![](Img/exec1.png)
 
-        ![](img/exec2.png)
+        ![](Img/exec2.png)
 
     - 注意如果是要执行脚本，一定要写清楚绝对路径(包括脚本中的路径也必须是绝对路径)
 
-        ![](img/execw.png)
+        ![](Img/execw.png)
 
 7. 如何通过systemd设置实现一个脚本在任何情况下被杀死之后会立即重新启动？实现杀不死
     - 设置该脚本配置文件(图例为sshd.service)
 
-    ![](img/restart.png)
+    ![](Img/restart.png)
 
     - 但是，即便设置为`always`，当使用`systemctl stop`关闭时，或退出状态码在`RestartPreventExitStatus`中设定过的话，也无法重启。资料中说设置`RestartForceExitStatus`可以强制重启，但这个设置对`systemctl stop`也无效。。
 
